--- a/config/crescenttool/default/config_split.config_split.remote_stage.yml
+++ b/config/crescenttool/default/config_split.config_split.remote_stage.yml
@@ -7,11 +7,13 @@ label: 'Remote - Stage'
 description: ''
 folder: ../config/crescenttool/remote_stage
 module:
+  acquia_connector: 0
   dblog: 0
   shield: 0
   stage_file_proxy: 0
 theme: {  }
-blacklist: {  }
+blacklist:
+  - purge.logger_channels
 graylist: {  }
 graylist_dependents: true
 graylist_skip_equal: true
