--- a/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
+++ b/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
@@ -162,7 +162,12 @@ media--teaser:
     component:
       css/libraries/media/teaser.css: {}
 
-
+# === Media: Product Detail Slider - Remote Video === #
+media--product-detail-slider--remote-video:
+  version: 1.x
+  css:
+    component:
+      css/libraries/media/product-detail-slider__remote-video.css: {}
 
 # ========= Nodes ========= #
 
