--- a/config/crescenttool/default/core.entity_form_display.paragraph.step.default.yml
+++ b/config/crescenttool/default/core.entity_form_display.paragraph.step.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.step.field_content
+    - field.field.paragraph.step.field_pre_title
     - field.field.paragraph.step.field_title
     - paragraphs.paragraphs_type.step
   module:
@@ -14,15 +15,23 @@ bundle: step
 mode: default
 content:
   field_content:
-    weight: 1
+    weight: 2
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
     region: content
-  field_title:
+  field_pre_title:
+    type: string_textfield
     weight: 0
+    region: content
+    settings:
+      size: 8
+      placeholder: ''
+    third_party_settings: {  }
+  field_title:
+    weight: 1
     settings:
       size: 8
       placeholder: ''
@@ -31,5 +40,4 @@ content:
     region: content
 hidden:
   created: true
-  field_pre_title: true
   status: true
