--- a/config/crescenttool/default/core.entity_view_display.paragraph.step.default.yml
+++ b/config/crescenttool/default/core.entity_view_display.paragraph.step.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.step.field_content
+    - field.field.paragraph.step.field_pre_title
     - field.field.paragraph.step.field_title
     - paragraphs.paragraphs_type.step
   module:
@@ -14,14 +15,22 @@ bundle: step
 mode: default
 content:
   field_content:
-    weight: 1
+    weight: 2
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
-  field_title:
+  field_pre_title:
+    type: string
     weight: 0
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+  field_title:
+    weight: 1
     label: above
     settings:
       link_to_entity: false
@@ -29,5 +38,4 @@ content:
     type: string
     region: content
 hidden:
-  field_pre_title: true
   search_api_excerpt: true
