--- a/config/crescenttool/default/core.entity_view_display.node.product.full.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.product.full.yml
@@ -6,6 +6,8 @@ dependencies:
     - core.entity_view_mode.node.full
     - field.field.node.product.body
     - field.field.node.product.field_featured_product
+    - field.field.node.product.field_industry
+    - field.field.node.product.field_launch_date
     - field.field.node.product.field_long_description
     - field.field.node.product.field_media
     - field.field.node.product.field_meta_tags
@@ -35,15 +37,6 @@ content:
     third_party_settings: {  }
     type: string
     region: content
-  field_media:
-    type: entity_reference_entity_view
-    weight: 4
-    region: content
-    label: hidden
-    settings:
-      view_mode: product_detail_slider
-      link: false
-    third_party_settings: {  }
   field_product_features:
     weight: 2
     label: hidden
@@ -72,7 +65,9 @@ content:
 hidden:
   body: true
   field_featured_product: true
+  field_industry: true
   field_launch_date: true
+  field_media: true
   field_meta_tags: true
   field_new_product: true
   field_product_classifications: true
