VYRKCATG-287: Config update for prod.

--- a/config/crescenttool/remote_prod/purge.logger_channels.yml
+++ b/config/crescenttool/remote_prod/purge.logger_channels.yml
@@ -12,12 +12,18 @@ channels:
       - 2
       - 3
   -
-    id: purger_acquia_purge_e7e91e5f60
+    id: diagnostics
+    grants:
+      - 3
+  -
+    id: purger_acquia_purge_4316d96217
     grants:
       - 0
       - 2
       - 3
   -
-    id: diagnostics
+    id: purger_acquia_purge_e7e91e5f60
     grants:
+      - 0
+      - 2
       - 3
