--- a/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
+++ b/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
@@ -135,6 +135,14 @@ block--system--system-breadcrumb-block:
     component:
       css/libraries/block/breadcrumbs.css: {}
 
+block--crescenttool-core--product-buy-now-sticky:
+  version: 1.x
+  css:
+    component:
+      css/libraries/block/product-buy-now-sticky.css: { }
+  js:
+    js/libraries/block/product-buy-now-sticky.js: {}
+
 block--pricespider-generic-widget-block:
   version: 1.x
   css:
@@ -162,12 +170,20 @@ media--teaser:
     component:
       css/libraries/media/teaser.css: {}
 
+# === Media: Teaser === #
+media--modal:
+  version: 1.x
+  css:
+    component:
+      css/libraries/media/modal.css: {}
+
 # === Media: Product Detail Slider - Remote Video === #
 media--product-detail-slider--remote-video:
   version: 1.x
   css:
     component:
       css/libraries/media/product-detail-slider__remote-video.css: {}
+
 
 # ========= Nodes ========= #
 
@@ -178,6 +194,18 @@ node--full:
   css:
     component:
       css/libraries/node/full.css: {}
+
+node--full--media-page:
+  version: 1.x
+  css:
+    component:
+      css/libraries/node/full--media-page.css: {}
+
+node--full--page:
+  version: 1.x
+  css:
+    component:
+      css/libraries/node/full--page.css: {}
 
 node--full--product:
   version: 1.x
@@ -193,6 +221,25 @@ node--full--product:
     - core/jquery.once
     - crescenttool/library--swiper
     - crescenttool/library--jquery-roving-tabindex
+
+node--full--product-category:
+  version: 1.x
+  css:
+    component:
+      css/libraries/node/full--product-category.css: { }
+  js:
+    js/libraries/node/full--product-category.js: { }
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/jquery.once
+    - gearwrench/library--jquery-roving-tabindex
+
+node--full--product-industry:
+  version: 1.x
+  css:
+    component:
+      css/libraries/node/full--product-industry.css: { }
 
 # === Node: Search Index === #
 node--search-index:
@@ -215,7 +262,19 @@ node--teaser--product:
     component:
       css/libraries/node/teaser--product.css: { }
 
+node--teaser--media-page:
+  version: 1.x
+  css:
+    component:
+      css/libraries/node/teaser--media-page.css: { }
+
 # === Node: Tile === #
+
+node--tile:
+  version: 1.x
+  css:
+    component:
+      css/libraries/node/tile.css: { }
 
 node--tile--product-listing:
   version: 1.x
@@ -255,12 +314,26 @@ paragraph--full--content:
     component:
       css/libraries/paragraph/full--content.css: {}
 
+# Content #
+paragraph--full--content-2-column:
+  version: 1.x
+  css:
+    component:
+      css/libraries/paragraph/full--content-2-column.css: {}
+
 # Content Callout #
 paragraph--full--content-callout:
   version: 1.x
   css:
     component:
       css/libraries/paragraph/full--content-callout.css: {}
+
+# Embed View #
+paragraph--full--embed-view:
+  version: 1.x
+  css:
+    component:
+      css/libraries/paragraph/full--embed-view.css: {}
 
 # Hero #
 paragraph--full--hero:
@@ -295,6 +368,7 @@ paragraph--full--featured-content:
   css:
     component:
       css/libraries/paragraph/full--featured-content.css: {}
+
 paragraph--full--featured-content--layout-grid:
   version: 1.x
   css:
@@ -302,6 +376,7 @@ paragraph--full--featured-content--layout-grid:
       css/libraries/paragraph/full--featured-content--layout-grid.css: {}
   dependencies:
     - crescenttool/paragraph--full--featured-content
+
 paragraph--full--featured-content--layout-list:
   version: 1.x
   css:
@@ -327,6 +402,7 @@ paragraph--full--featured-media:
     - core/drupal
     - core/jquery
     - core/jquery.once
+
 paragraph--full--featured-media--layout-full:
   version: 1.x
   css:
@@ -334,6 +410,7 @@ paragraph--full--featured-media--layout-full:
       css/libraries/paragraph/full--featured-media--layout-full.css: {}
   dependencies:
     - crescenttool/paragraph--full--featured-media
+
 paragraph--full--featured-media--layout-grid:
   version: 1.x
   css:
@@ -341,6 +418,15 @@ paragraph--full--featured-media--layout-grid:
       css/libraries/paragraph/full--featured-media--layout-grid.css: {}
   dependencies:
     - crescenttool/paragraph--full--featured-media
+
+paragraph--full--featured-media--layout-live-area:
+  version: 1.x
+  css:
+    component:
+      css/libraries/paragraph/full--featured-media--layout-live-area.css: {}
+  dependencies:
+    - gearwrench/paragraph--full--featured-media
+
 paragraph--full--featured-media--layout-slider:
   version: 1.x
   css:
@@ -446,6 +532,18 @@ view:
     component:
       css/libraries/view/view.css: {}
 
+view--media-pages:
+  version: 1.x
+  css:
+    component:
+      css/libraries/view/media-pages.css: {}
+
+view--taxonomy-term:
+  version: 1.x
+  css:
+    component:
+      css/libraries/view/taxonomy-term.css: {}
+
 view--related-products:
   version: 1.x
   css:
@@ -465,11 +563,51 @@ view--product-listing-grid:
     component:
       css/libraries/view/product-listing-grid.css: {}
 
+view--new-products:
+  version: 1.x
+  css:
+    component:
+      css/libraries/view/new-products.css: {}
+  js:
+    js/libraries/view/new-products.js: {}
+
+view--product-category-grid:
+  version: 1.x
+  css:
+    component:
+      css/libraries/view/product-category-grid.css: {}
+
+view--product-industry-grid:
+  version: 1.x
+  css:
+    component:
+      css/libraries/view/product-industry-grid.css: {}
+
+view--acquia-search:
+  version: 1.x
+  css:
+    component:
+      css/libraries/view/search.css: {}
+
 view--search:
   version: 1.x
   css:
     component:
       css/libraries/view/search.css: {}
+
+view--social-feed:
+  version: 1.x
+  css:
+    component:
+      css/libraries/view/social-feed.css: {}
+  js:
+    js/libraries/view/instagram-feed.js: {}
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/jquery.once
+    - gearwrench/library--swiper
+    - gearwrench/library--add-to-any
 
 # ========= Forms ========= #
 webform--warranty-replacement-form:
