VYRKCATG-210: Added missing aspects of the category page imports.

--- a/config/crescenttool/default/migrate_plus.migration.crescenttool_product_category_pages_level_three.yml
+++ b/config/crescenttool/default/migrate_plus.migration.crescenttool_product_category_pages_level_three.yml
@@ -68,6 +68,19 @@ process:
     process:
       vocabulary_id: vid
       target_id: target_id
+  category_facets_array:
+    plugin: get_all_level_3_category_facets
+    source: remote_id
+  field_category_facets:
+    plugin: sub_process
+    source: '@category_facets_array'
+    include_source: true
+    process:
+      vocabulary_id: vid
+      target_id: target_id
+  field_show_set_filter:
+    plugin: determine_set_filter_show
+    source: remote_id
 destination:
   plugin: 'entity:node'
 migration_dependencies: {  }
