--- a/config/crescenttool/default/core.entity_form_display.node.product.default.yml
+++ b/config/crescenttool/default/core.entity_form_display.node.product.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.product.body
     - field.field.node.product.field_featured_product
     - field.field.node.product.field_industry
+    - field.field.node.product.field_keywords
     - field.field.node.product.field_launch_date
     - field.field.node.product.field_long_description
     - field.field.node.product.field_media
@@ -85,6 +86,7 @@ third_party_settings:
         - field_product_images
         - field_set
         - field_set_components
+        - field_keywords
       parent_name: group_tabs
       weight: 3
       format_type: tab
@@ -133,6 +135,14 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: entity_reference_autocomplete
+    region: content
+  field_keywords:
+    weight: 23
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textarea
     region: content
   field_launch_date:
     weight: 14
