--- a/config/crescenttool/default/core.entity_view_display.node.product.default.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.product.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.product.body
     - field.field.node.product.field_featured_product
     - field.field.node.product.field_industry
+    - field.field.node.product.field_keywords
     - field.field.node.product.field_launch_date
     - field.field.node.product.field_long_description
     - field.field.node.product.field_media
@@ -32,6 +33,7 @@ hidden:
   body: true
   field_featured_product: true
   field_industry: true
+  field_keywords: true
   field_launch_date: true
   field_long_description: true
   field_media: true
