VYRKCATG-210: Added the brand field and mapped it in the import.

--- a/config/crescenttool/default/migrate_plus.migration.crescenttool_products.yml
+++ b/config/crescenttool/default/migrate_plus.migration.crescenttool_products.yml
@@ -99,8 +99,12 @@ source:
       selector: Values
     -
       name: remote_keywords
-      label: 'Keywords'
-      selector: //*[@AttributeID='ATT737269']
+      label: Keywords
+      selector: '//*[@AttributeID=''ATT737269'']'
+    -
+      name: remote_brand
+      label: Brand
+      selector: '//*[@AttributeID=''Brand'']'
   ids:
     remote_sku:
       type: string
@@ -211,6 +215,7 @@ process:
     source: remote_set_contents
     attribute: ATT921
   field_keywords: remote_keywords
+  field_brand: remote_brand
 destination:
   plugin: crescenttool_product
   bundle: product
