--- a/config/crescenttool/default/core.entity_form_display.node.product.default.yml
+++ b/config/crescenttool/default/core.entity_form_display.node.product.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.product.body
+    - field.field.node.product.field_brand
     - field.field.node.product.field_featured_product
     - field.field.node.product.field_industry
     - field.field.node.product.field_keywords
@@ -48,6 +49,7 @@ third_party_settings:
     group_main:
       children:
         - title
+        - field_brand
         - field_industry
         - body
         - field_media
@@ -105,7 +107,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 3
+    weight: 4
     settings:
       rows: 9
       summary_rows: 3
@@ -115,10 +117,18 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 4
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_brand:
+    weight: 2
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_featured_product:
     weight: 11
     settings:
@@ -127,7 +137,7 @@ content:
     type: boolean_checkbox
     region: content
   field_industry:
-    weight: 2
+    weight: 3
     settings:
       match_operator: CONTAINS
       match_limit: 10
@@ -137,7 +147,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_keywords:
-    weight: 23
+    weight: 24
     settings:
       rows: 5
       placeholder: ''
@@ -151,7 +161,7 @@ content:
     type: datetime_default
     region: content
   field_long_description:
-    weight: 16
+    weight: 17
     settings:
       size: 60
       placeholder: ''
@@ -159,7 +169,7 @@ content:
     type: string_textfield
     region: content
   field_media:
-    weight: 4
+    weight: 5
     settings:
       media_types:
         - image
@@ -183,7 +193,7 @@ content:
     type: boolean_checkbox
     region: content
   field_product_classifications:
-    weight: 19
+    weight: 20
     settings:
       match_operator: CONTAINS
       match_limit: 10
@@ -193,7 +203,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_product_features:
-    weight: 17
+    weight: 18
     settings:
       size: 60
       placeholder: ''
@@ -202,13 +212,13 @@ content:
     region: content
   field_product_images:
     type: media_library_widget
-    weight: 20
+    weight: 21
     settings:
       media_types: {  }
     third_party_settings: {  }
     region: content
   field_product_specifications:
-    weight: 18
+    weight: 19
     settings:
       match_operator: CONTAINS
       match_limit: 10
@@ -228,14 +238,14 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_set:
-    weight: 21
+    weight: 22
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_set_components:
-    weight: 22
+    weight: 23
     settings:
       match_operator: CONTAINS
       match_limit: 10
@@ -262,7 +272,7 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 3
+    weight: 2
     region: content
     settings:
       include_locked: true
