--- a/config/crescenttool/default/core.entity_view_display.node.product.default.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.product.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.product.body
+    - field.field.node.product.field_brand
     - field.field.node.product.field_featured_product
     - field.field.node.product.field_industry
     - field.field.node.product.field_keywords
@@ -31,6 +32,7 @@ mode: default
 content: {  }
 hidden:
   body: true
+  field_brand: true
   field_featured_product: true
   field_industry: true
   field_keywords: true
