--- a/config/crescenttool/default/core.entity_view_display.node.product.full.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.product.full.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.full
     - field.field.node.product.body
+    - field.field.node.product.field_brand
     - field.field.node.product.field_featured_product
     - field.field.node.product.field_industry
     - field.field.node.product.field_keywords
@@ -109,6 +110,7 @@ content:
     region: content
 hidden:
   body: true
+  field_brand: true
   field_featured_product: true
   field_industry: true
   field_keywords: true
