VYRKCATG-216-ct-media-page-styling
- copied over the relevant template from GW to CT
- copied over relevant Sass from GW to CT
- updated Sass to match CT variable and colors
- updated libraries file to add the Sass to this media node
- copied and renamed the preprocess code for this node from GW to CT

--- a/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
+++ b/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
@@ -168,6 +168,12 @@ node--full:
     component:
       css/libraries/node/full.css: {}
 
+node--full--media-page:
+  version: 1.x
+  css:
+    component:
+      css/libraries/node/full--media-page.css: {}
+
 node--full--product:
   version: 1.x
   css:
