--- a/config/crescenttool/default/views.view.media_pages.yml
+++ b/config/crescenttool/default/views.view.media_pages.yml
@@ -100,6 +100,7 @@ display:
       row:
         type: 'entity:node'
         options:
+          relationship: none
           view_mode: teaser
       fields:
         title:
