--- a/config/crescenttool/default/system.site.yml
+++ b/config/crescenttool/default/system.site.yml
@@ -1,6 +1,6 @@
 uuid: 1f667a95-e317-4412-ae50-891247d79b41
 name: 'Crescent Tools'
-mail: noreply@crescenttool.com
+mail: no-reply@crescenttool.com
 slogan: ''
 page:
   403: ''
