Added Bazaar voice script file and updated config key,

--- a/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
+++ b/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
@@ -215,6 +215,7 @@ node--full--product:
       css/contrib-overrides/bazaarvoice/bazaarvoice.css: {}
   js:
     js/libraries/node/full--product.js: {}
+    https://apps.bazaarvoice.com/deployments/crescent/main_site_new_brand/production/en_US/bv.js: { type: external, async: true, minified: true }
   dependencies:
     - core/drupal
     - core/jquery
