GW: Updated warranty from email

--- a/config/gearwrench/default/webform.webform.warranty_replacement_form.yml
+++ b/config/gearwrench/default/webform.webform.warranty_replacement_form.yml
@@ -343,7 +343,7 @@ handlers:
       cc_options: {  }
       bcc_mail: ''
       bcc_options: {  }
-      from_mail: noreply@gearwrench.com
+      from_mail: no-reply@gearwrench.com
       from_options: {  }
       from_name: 'GEARWRENCH Warranty/Replacement'
       subject: 'Your GEARWRENCH Support Case: #[webform_submission:sid]'
@@ -357,7 +357,7 @@ handlers:
       attachments: false
       twig: false
       debug: false
-      reply_to: noreply@gearwrench.com
+      reply_to: no-reply@gearwrench.com
       return_path: ''
       sender_mail: ''
       sender_name: ''
