IgnoreSid: Trying to get git ignore to work for ignoring the sid config.

--- a/config/gearwrench/default/views.view.media_pages.yml
+++ b/config/gearwrench/default/views.view.media_pages.yml
@@ -327,7 +327,7 @@ display:
                   is_secondary: false
                 select_all_none: false
                 select_all_none_nested: false
-                display_inline: 0
+                display_inline: false
       defaults:
         exposed_form: false
     cache_metadata:
