--- a/config/gearwrench/default/config_export_ignore.settings.yml
+++ b/config/gearwrench/default/config_export_ignore.settings.yml
@@ -1,2 +1,2 @@
 configuration_names:
-  - gearwrench_core.settings.warranty_highest_exported_sid
+  - 'gearwrench_core.settings:warranty_highest_exported_sid'
