configs for cta slider

--- a/config/crescenttool/default/field.field.node.landing_page.field_components.yml
+++ b/config/crescenttool/default/field.field.node.landing_page.field_components.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.node.field_components
     - node.type.landing_page
     - paragraphs.paragraphs_type.accordion
+    - paragraphs.paragraphs_type.banner_cta_slider
     - paragraphs.paragraphs_type.content
     - paragraphs.paragraphs_type.content_2_column
     - paragraphs.paragraphs_type.content_callout_container
@@ -52,12 +53,22 @@ settings:
       section: section
       tabs: tabs
       steps: steps
+      banner_cta_slider: banner_cta_slider
     target_bundles_drag_drop:
       accordion:
         enabled: true
         weight: -43
       accordion_item:
         weight: -42
+        enabled: false
+      banner_cta_slide:
+        weight: 27
+        enabled: false
+      banner_cta_slider:
+        enabled: true
+        weight: 28
+      banner_cta_thumbnails:
+        weight: 29
         enabled: false
       content:
         enabled: true
