VYRKCATG-251: Added the related css files for the trade grid.

--- a/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
+++ b/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
@@ -242,6 +242,12 @@ node--full--product-industry:
     component:
       css/libraries/node/full--product-industry.css: { }
 
+node--full--product-trade:
+  version: 1.x
+  css:
+    component:
+      css/libraries/node/full--product-trade.css: { }
+
 # === Node: Search Index === #
 node--search-index:
   version: 1.x
@@ -583,6 +589,12 @@ view--product-industry-grid:
   css:
     component:
       css/libraries/view/product-industry-grid.css: {}
+
+view--product-trade-grid:
+  version: 1.x
+  css:
+    component:
+      css/libraries/view/product-trade-grid.css: {}
 
 view--acquia-search:
   version: 1.x
