VYRKCATG-251: Updating the new products view.

--- a/config/crescenttool/default/views.view.new_products.yml
+++ b/config/crescenttool/default/views.view.new_products.yml
@@ -67,6 +67,7 @@ display:
               field_product_classifications_target_id:
                 plugin_id: bef
                 advanced:
+                  sort_options: false
                   rewrite:
                     filter_rewrite_values: ''
                   collapsible: false
