--- a/config/crescenttool/default/core.extension.yml
+++ b/config/crescenttool/default/core.extension.yml
@@ -119,6 +119,7 @@ module:
   search: 0
   search_api: 0
   search_api_solr: 0
+  selective_better_exposed_filters: 0
   serialization: 0
   shortcut: 0
   simple_sitemap: 0
