VYRKCATG-57 ct our-tools category grid styles
- extracted view card border radius styles into a mixin
- created a new compact version of the view card for things like all-tools grid
- extracted the compact version into a mixin
- added new stylesheet for the brand card grid
- updated the libraries in theme to add the styles for this view

--- a/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
+++ b/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
@@ -578,6 +578,12 @@ view--new-products:
   js:
     js/libraries/view/new-products.js: {}
 
+view--product-brand-grid:
+  version: 1.x
+  css:
+    component:
+      css/libraries/view/product-brand-grid.css: {}
+
 view--product-category-grid:
   version: 1.x
   css:
