--- a/config/crescenttool/default/node.type.media_page.yml
+++ b/config/crescenttool/default/node.type.media_page.yml
@@ -14,4 +14,4 @@ description: 'The purpose of this content type is to hold a variety of media con
 help: ''
 new_revision: true
 preview_mode: 1
-display_submitted: true
+display_submitted: false
