--- a/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
+++ b/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
@@ -236,6 +236,12 @@ node--full--product-category:
     - core/jquery.once
     - crescenttool/library--jquery-roving-tabindex
 
+node--full--product-brand:
+  version: 1.x
+  css:
+    component:
+      css/libraries/node/full--product-brand.css: { }
+
 node--full--product-industry:
   version: 1.x
   css:
