--- a/config/crescenttool/default/core.entity_view_display.node.product.full.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.product.full.yml
@@ -101,13 +101,22 @@ content:
       link: false
     third_party_settings: {  }
   field_product_specifications:
-    weight: 4
+    weight: 5
     label: hidden
     settings:
       link: false
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_set_components:
+    type: entity_reference_entity_view
+    weight: 4
+    region: content
+    label: hidden
+    settings:
+      view_mode: set_listing
+      link: false
+    third_party_settings: {  }
 hidden:
   body: true
   field_brand: true
@@ -120,7 +129,6 @@ hidden:
   field_product_classifications: true
   field_related_products: true
   field_set: true
-  field_set_components: true
   field_sku_group: true
   field_upc: true
   langcode: true
