--- a/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
+++ b/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
@@ -453,6 +453,20 @@ paragraph--full--product-slider:
     - core/jquery.once
     - crescenttool/library--swiper
 
+# Banner CTA Slider #
+paragraph--full--banner-cta-slider:
+  version: 1.x
+  css:
+    component:
+      css/libraries/paragraph/full--banner-cta-slider.css: {}
+  js:
+    js/libraries/paragraph/full--banner-cta-slider.js: { }
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/jquery.once
+    - crescenttool/library--swiper
+    -
 # Pull Quote #
 paragraph--full--pullquote:
   version: 1.x
