--- a/config/crescenttool/default/core.entity_view_display.paragraph.banner_cta_slide.default.yml
+++ b/config/crescenttool/default/core.entity_view_display.paragraph.banner_cta_slide.default.yml
@@ -6,26 +6,53 @@ dependencies:
     - field.field.paragraph.banner_cta_slide.field_content
     - field.field.paragraph.banner_cta_slide.field_link
     - field.field.paragraph.banner_cta_slide.field_media_background
+    - field.field.paragraph.banner_cta_slide.field_text_pagination
+    - field.field.paragraph.banner_cta_slide.field_thumbnail_image
     - field.field.paragraph.banner_cta_slide.field_title
+    - image.style.large_landscape
     - paragraphs.paragraphs_type.banner_cta_slide
   module:
     - blazy
+    - field_group
     - link
     - text
+third_party_settings:
+  field_group:
+    group_field_content:
+      children:
+        - field_title
+        - field_content
+        - field_link
+      parent_name: ''
+      weight: 1
+      format_type: html_element
+      region: content
+      format_settings:
+        element: div
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        attributes: ''
+        effect: none
+        speed: fast
+        id: ''
+        classes: component-banner-cta-slide__content-field
+        show_empty_fields: false
+      label: 'Field Content'
 id: paragraph.banner_cta_slide.default
 targetEntityType: paragraph
 bundle: banner_cta_slide
 mode: default
 content:
   field_content:
-    weight: 2
+    weight: 3
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_link:
-    weight: 3
+    weight: 4
     label: hidden
     settings:
       trim_length: 80
@@ -40,7 +67,7 @@ content:
     weight: 0
     label: hidden
     settings:
-      image_style: ''
+      image_style: large_landscape
       responsive_image_style: ''
       media_switch: ''
       thumbnail_style: ''
@@ -79,7 +106,7 @@ content:
     type: blazy_media
     region: content
   field_title:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
@@ -87,4 +114,6 @@ content:
     type: string
     region: content
 hidden:
+  field_text_pagination: true
+  field_thumbnail_image: true
   search_api_excerpt: true
