updating the display settings for the page title to show on brand pages

--- a/config/crescenttool/default/block.block.crescenttool_page_title.yml
+++ b/config/crescenttool/default/block.block.crescenttool_page_title.yml
@@ -24,6 +24,7 @@ visibility:
     bundles:
       landing_page: landing_page
       page: page
+      product_brand: product_brand
       product_category: product_category
       product_listing: product_listing
     negate: false
