--- a/config/crescenttool/default/core.entity_view_display.node.product.set_listing.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.product.set_listing.yml
@@ -7,7 +7,6 @@ dependencies:
     - field.field.node.product.body
     - field.field.node.product.field_brand
     - field.field.node.product.field_featured_product
-    - field.field.node.product.field_industry
     - field.field.node.product.field_keywords
     - field.field.node.product.field_launch_date
     - field.field.node.product.field_long_description
@@ -22,6 +21,7 @@ dependencies:
     - field.field.node.product.field_set
     - field.field.node.product.field_set_components
     - field.field.node.product.field_sku_group
+    - field.field.node.product.field_trade
     - field.field.node.product.field_upc
     - node.type.product
   module:
@@ -43,7 +43,6 @@ hidden:
   body: true
   field_brand: true
   field_featured_product: true
-  field_industry: true
   field_keywords: true
   field_launch_date: true
   field_media: true
@@ -57,6 +56,7 @@ hidden:
   field_set: true
   field_set_components: true
   field_sku_group: true
+  field_trade: true
   field_upc: true
   langcode: true
   links: true
