--- a/config/crescenttool/default/field.field.node.product_industry.field_industry.yml
+++ b/config/crescenttool/default/field.field.node.product_industry.field_industry.yml
@@ -5,7 +5,6 @@ dependencies:
   config:
     - field.storage.node.field_industry
     - node.type.product_industry
-    - taxonomy.vocabulary.product_industry
 id: node.product_industry.field_industry
 field_name: field_industry
 entity_type: node
@@ -19,8 +18,7 @@ default_value_callback: ''
 settings:
   handler: 'default:taxonomy_term'
   handler_settings:
-    target_bundles:
-      product_industry: product_industry
+    target_bundles: {  }
     sort:
       field: name
       direction: asc
