--- a/config/crescenttool/default/user.role.anonymous.yml
+++ b/config/crescenttool/default/user.role.anonymous.yml
@@ -16,7 +16,10 @@ permissions:
   - 'view any media_page content'
   - 'view any page content'
   - 'view any product content'
+  - 'view any product_brand content'
   - 'view any product_category content'
   - 'view any product_industry content'
+  - 'view any product_listing content'
+  - 'view any product_trade content'
   - 'view any social_post content'
   - 'view media'
